--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello!
+<h1>Hello!</h1>
+
+<p>My name is Marian Veteanu.</p>
+
+<p>Someday I will build a more interesting landing page.</p>
+
+<p>Meanwhile you can find more about me at:</p>
+
+<ul>
+  <li>https://github.com/mveteanu/</li>
+  
+</ul>
+
+
