--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
+<html>
+<head>
+<title>About Marian Veteanu</title>
+</head>
+<body>
 <h1>Hello!</h1>
 
 <p>My name is Marian Veteanu.</p>
 
-<p>Someday I will build a more interesting landing page.</p>
+<img width=200 src="img/marian.jpg">
 
-<p>Meanwhile you can find more about me at:</p>
+<p>Someday I will build a more interesting landing page. Meanwhile you can find more about me at the following sites.</p>
+
+<h2>Social</h2>
 
 <ul>
-  <li>https://github.com/mveteanu/</li>
-  
+  <li><a href="https://www.linkedin.com/in/mveteanu/">LinkedIn</a></li>
+  <li><a href="https://twitter.com/mveteanu">Twitter</a></li>
+  <li><a href="https://github.com/mveteanu/">GitHub</a></li>
+  <li><a href="https://www.youtube.com/CodingAdventures">YouTube</a></li>
 </ul>
 
+<h2>Old projects</h2>
 
+<ul>
+  <li><a href="https://vmasoft.net/">vmasoft.net</a></li>
+  <li><a href="https://powertests.net/">PowerTests.NET</a></li>
+</ul>
+
+<h2>Old blogs</h2>
+
+<ul>
+  <li><a href="https://codeavenger.com/">Codeavenger</a></li>
+  <li><a href="http://itobserver.net">ITObserver</a></li>
+</ul>
+
+<h2>New projects</h2>
+
+<p>New projects not listed here. Please contact me to find out more.</p>
+</body>
+</html>
