--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ body {
     <div class="rightcontent w-col w-col-6 w-col-stack">
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">Marian Veteanu</div>
-        <h1 class="tagline"><strong class="bold-text">Programmer. Technologist. Hacker.</strong></h1>
-        <p class="bio">Hello! My name is Marian Veteanu – an IT professional by day, hacker and youtuber by night. My first encounter with programming was at the age of 13 (on a clone of ZX-Spectrum 48K computer). Since then, I spent many days and nights building and launching software projects.</p>
+        <h1 class="tagline"><strong class="bold-text">Technologist | Architect | Innovation Leader</strong></h1>
+        <p class="bio">Hello! My name is Marian Veteanu – I’m a technologist with a passion for software development, architecture, and product management. I lead teams in building innovative technology platforms that bring together technology and business goals to solve real-world challenges. In addition to my core work, I actively explore side projects, fueling my curiosity and passion for continuous learning and innovation.</p>
         <div class="links w-row">
           <div class="column w-col w-col-4">
             <div class="text-block-2">Social</div>
