--- a/index.html
+++ b/index.html
@@ -33,24 +33,27 @@ body {
           <div class="column w-col w-col-4">
             <div class="text-block-2">Social</div>
             <ul role="list" class="list w-list-unstyled">
-			  <li><a href="https://www.linkedin.com/in/mveteanu/">LinkedIn</a></li>
-			  <li><a href="https://twitter.com/mveteanu">Twitter</a></li>
-			  <li><a href="https://github.com/mveteanu/">GitHub</a></li>
-			  <li><a href="https://www.youtube.com/CodingAdventures">YouTube</a></li>
+              <li><a href="https://www.linkedin.com/in/mveteanu/">LinkedIn</a></li>
+              <li><a href="https://twitter.com/mveteanu">Twitter</a></li>
+              <li><a href="https://github.com/mveteanu/">GitHub</a></li>
+              <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
           <div class="column-2 w-col w-col-4">
-            <div class="text-block-2">Old Projects</div>
+            <div class="text-block-2">Side Projects</div>
             <ul role="list" class="list w-list-unstyled">
-			  <li><a href="https://vmasoft.net/">vmasoft.net</a></li>
-			  <li><a href="https://powertests.net/">PowerTests.NET</a></li>
+              <li><a href="https://codeguppy.com/">codeguppy.com</a></li>
+              <li><a href="https://x.com/codeGuppy/">codeguppy on Twitter</a></li>
+              <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
           <div class="w-col w-col-4">
-            <div class="text-block-2">Old Blogs</div>
+            <div class="text-block-2">Old Projects</div>
             <ul role="list" class="list w-list-unstyled">
-			  <li><a href="https://codeavenger.com/">Codeavenger</a></li>
-			  <li><a href="http://itobserver.net">ITObserver</a></li>
+              <li><a href="https://vmasoft.net/">vmasoft.net</a></li>
+              <li><a href="https://powertests.net/">PowerTests.NET</a></li>
+              <li><a href="https://codeavenger.com/">Codeavenger</a></li>
+              <li><a href="http://itobserver.net">ITObserver</a></li>
             </ul>
           </div>
         </div>
