--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
             <ul role="list" class="list w-list-unstyled">
               <li><a href="https://vmasoft.net/">vmasoft.net</a></li>
               <li><a href="https://powertests.net/">PowerTests.NET</a></li>
-              <li><a href="https://codeavenger.com/">Codeavenger</a></li>
+              <li><a href="https://codeavenger.com/">Code Avenger</a></li>
               <li><a href="http://itobserver.net">ITObserver</a></li>
             </ul>
           </div>
