--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
             <div class="text-block-2">Side Projects</div>
             <ul role="list" class="list w-list-unstyled">
               <li><a href="https://codeguppy.com/">codeguppy.com</a></li>
-              <li><a href="https://x.com/codeGuppy/">Twitter (codeguppy)</a></li>
+              <li><a href="https://x.com/codeGuppy/">Twitter 2 (codeguppy)</a></li>
               <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
