--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {
             <ul role="list" class="list w-list-unstyled">
               <li><a href="https://codeguppy.com/">codeguppy.com</a></li>
               <li><a href="https://x.com/codeGuppy/">Twitter 2 (codeguppy)</a></li>
+              <li><a href="https://github.com/CodeGuppyPrograms/">GitHub 2 (codeguppy)</a></li>
               <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
