--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ body {
     <div class="rightcontent w-col w-col-6 w-col-stack">
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">Marian Veteanu</div>
-        <h1 class="tagline"><strong class="bold-text">Technologist | Architect | Innovation Leader</strong></h1>
+        <!-- <h1 class="tagline"><strong class="bold-text">Technologist | Architect | Innovation Leader</strong></h1> -->
+        <h1 class="tagline"><strong class="bold-text">Technology Architect and Product Leader</strong></h1>
         <p class="bio">Hello! My name is Marian Veteanu – I’m a technologist with a passion for software development, architecture, and product management. I lead teams in building innovative technology platforms that bring together technology and business goals to solve real-world challenges. In the evenings and late at night, you can find me actively exploring side projects, fueling my curiosity and passion for continuous learning and innovation.</p>
         <div class="links w-row">
           <div class="column w-col w-col-4">
