--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
         <div class="name">Marian Veteanu</div>
         <!-- <h1 class="tagline"><strong class="bold-text">Technologist | Architect | Innovation Leader</strong></h1> -->
         <h1 class="tagline"><strong class="bold-text">Technology Architect and Product Leader</strong></h1>
-        <p class="bio">Hello! My name is Marian Veteanu – I’m a technologist with a passion for software development, architecture, and product management. I lead teams in building innovative technology platforms that bring together technology and business goals to solve real-world challenges. In the evenings and late at night, you can find me actively exploring side projects, fueling my curiosity and passion for continuous learning and innovation.</p>
+        <p class="bio">Hello! My name is Marian Veteanu, and I’m a technologist with a passion for software development, architecture, and product management. I lead teams in building innovative technology platforms that align with business goals to solve real-world challenges. In the evenings and late at night, you can find me working on side projects or exploring cutting-edge frameworks, architectures, and technologies.</p>
         <div class="links w-row">
           <div class="column w-col w-col-4">
             <div class="text-block-2">Social</div>
