added new message

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@ body {
             </ul>
           </div>
         </div>
-        <div class="credit">🆕 New projects not listed here. Please <a href="https://twitter.com/mveteanu">contact me on Twitter</a> to find out more.</a>
+
+        <!-- <div class="credit">🆕 New projects not listed here. Please <a href="https://twitter.com/mveteanu">contact me on Twitter</a> to find out more.</a>
+        </div> -->
+
+        <div class="credit">🆕 Looking to collaborate or need expertise in software development, architecture, and product management? Let’s connect! Visit my LinkedIn profile for more details on how I can help your organization: <a href="https://www.linkedin.com/in/mveteanu/">https://www.linkedin.com/in/mveteanu/</a>
         </div>
+
       </div>
     </div>
   </div>
