--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">Marian Veteanu</div>
         <!-- <h1 class="tagline"><strong class="bold-text">Technologist | Architect | Innovation Leader</strong></h1> -->
-        <h1 class="tagline"><strong class="bold-text">Technology Architect and Product Leader</strong></h1>
+        <h1 class="tagline"><strong class="bold-text">Entrepreneurial Product Leader and Technology Architect</strong></h1>
         <p class="bio">Hello! My name is Marian Veteanu, and I’m a technologist with a passion for software development, architecture, and product management. I lead teams in building innovative technology platforms that align with business goals to solve real-world challenges. In the evenings and late at night, you can find me working on side projects or exploring cutting-edge frameworks, architectures, and technologies.</p>
 
         <div class="links w-row">
