--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@ body {
             <div class="text-block-2">Social</div>
             <ul role="list" class="list w-list-unstyled">
               <li><a href="https://www.linkedin.com/in/mveteanu/">LinkedIn</a></li>
-              <li><a href="https://twitter.com/mveteanu">Twitter 1 (MV)</a></li>
-              <li><a href="https://github.com/mveteanu/">GitHub 1 (MV)</a></li>
+              <li><a href="https://twitter.com/mveteanu">Twitter 1 (personal)</a></li>
+              <li><a href="https://github.com/mveteanu/">GitHub 1 (personal)</a></li>
               <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
           <div class="column-2 w-col w-col-4">
-            <div class="text-block-2">Side Projects</div>
+            <div class="text-block-2">Side Projects 💖</div>
             <ul role="list" class="list w-list-unstyled">
               <li><a href="https://codeguppy.com/">codeguppy.com</a></li>
-              <li><a href="https://x.com/codeGuppy/">Twitter 2 (codeguppy)</a></li>
-              <li><a href="https://github.com/CodeGuppyPrograms/">GitHub 2 (codeguppy)</a></li>
+              <li><a href="https://x.com/codeGuppy/">Twitter 2 (for codeguppy)</a></li>
+              <li><a href="https://github.com/CodeGuppyPrograms/">GitHub 2 (for codeguppy)</a></li>
               <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
