Update message me line

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
           </div>
         </div>
 
-        <div class="credit">🆕 Looking to collaborate or need expertise in software development, architecture, and product management? Let’s connect! Visit my LinkedIn profile for more details on how I can help your organization: <a href="https://www.linkedin.com/in/mveteanu/">https://www.linkedin.com/in/mveteanu/</a>
+        <div class="credit">🆕 Excited to join an organization where I can make an impact! Let’s connect and explore opportunities — <a href="https://www.linkedin.com/in/mveteanu/">message me on LinkedIn</a>!
         </div>
         
         <div class="journey-section">
@@ -136,7 +136,7 @@ body {
 		  
         </div>
 
-        <div style="margin-top:40px" class="credit">🆕 Looking to collaborate or need expertise in software development, architecture, and product management? Let’s connect! Visit my LinkedIn profile for more details on how I can help your organization: <a href="https://www.linkedin.com/in/mveteanu/">https://www.linkedin.com/in/mveteanu/</a>
+        <div style="margin-top:40px" class="credit">🆕 Excited to join an organization where I can make an impact! Let’s connect and explore opportunities — <a href="https://www.linkedin.com/in/mveteanu/">message me on LinkedIn</a>!
         </div>
 
         <!-- <div class="credit">🆕 New projects not listed here. Please <a href="https://twitter.com/mveteanu">contact me on Twitter</a> to find out more.</a>
