--- a/index.html
+++ b/index.html
@@ -52,17 +52,16 @@ body {
               <li><a href="https://www.linkedin.com/in/mveteanu/">LinkedIn</a></li>
               <li><a href="https://twitter.com/mveteanu">Twitter 1 (personal)</a></li>
               <li><a href="https://github.com/mveteanu/">GitHub 1 (personal)</a></li>
-              <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
             </ul>
           </div>
           <div class="column-2 w-col w-col-4">
             <div class="text-block-2">Side Projects 💖</div>
             <ul role="list" class="list w-list-unstyled">
               <li><a href="https://codeguppy.com/">codeguppy.com</a></li>
-			  <li><a href="https://www.youtube.com/shorts/uJmS-s4DKAM">Illustrated JS Book</a></li>
+			  <li><a href="https://www.youtube.com/shorts/uJmS-s4DKAM">'Illustrated JS' Book</a></li>
               <li><a href="https://x.com/codeGuppy/">Twitter 2 (for codeguppy)</a></li>
               <li><a href="https://github.com/CodeGuppyPrograms/">GitHub 2 (for codeguppy)</a></li>
-              <li><a href="https://www.youtube.com/@codingadventures">YouTube</a></li>
+              <li><a href="https://www.youtube.com/@codingadventures">YouTube (for codeguppy)</a></li>
             </ul>
           </div>
           <div class="w-col w-col-4">
