--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1 class="tagline"><strong class="bold-text">Software Engineering Leader - Cloud & AI Platform Architect</strong></h1>
         <!-- <p class="bio">Hello! My name is Marian Veteanu, and I’m a technologist with a passion for software development, architecture, and growing teams. I lead teams in building innovative technology platforms that align with business goals to solve real-world challenges. In the evenings and late at night, you can find me working on side projects or exploring cutting-edge frameworks, architectures, and technologies.</p> -->
 
-        <p class="bio">Hello! My name is Marian Veteanu, and I’m a <strong>Direct of Software Engineering</strong> and <strong>Technology Leader</strong> with a deep passion for software development, architecture, and building high-performing teams. I specialize in leading the design and delivery of innovative platforms that drive real-world impact. Whether scaling enterprise solutions, mentoring engineers, or shaping product direction, I bring a balanced approach of technical expertise and leadership experience. In the evenings and late at night, you’ll often find me working on side projects, or diving into emerging technologies and architectural patterns.</p>
+        <p class="bio">Hello! My name is Marian Veteanu, and I’m a <strong>Director of Software Engineering</strong> and <strong>Technology Leader</strong> with a deep passion for software development, architecture, and building high-performing teams. I specialize in leading the design and delivery of innovative platforms that drive real-world impact. Whether scaling enterprise solutions, mentoring engineers, or shaping product direction, I bring a balanced approach of technical expertise and leadership experience. In the evenings and late at night, you’ll often find me working on side projects, or diving into emerging technologies and architectural patterns.</p>
 
         <div class="links w-row">
 
@@ -75,17 +75,17 @@
           <div class="column-2 w-col w-col-4">
             <div class="text-block-2">Expertise</div>
             <ul role="list" class="list">
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">Microservices</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">GenAI / LLM</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">Software modernization</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">B2B & B2C SaaS</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">Cloud Native (Azure, GCP, AWS)</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">OWASP top 10 (for web and LLM)</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">DevOps / DORA metrics</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_microservices-pitfalls-what-to-know-before-ugcPost-7247406323917623298-wcYO">Microservices</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_msignite-activity-7264686414632468480-Q3hu">GenAI / LLM</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_thinking-about-adding-ai-features-to-your-activity-7335776668545925125-Yipw">Software modernization</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_multi-tenant-architectures-models-benefits-activity-7322629305069428736-7qbF">B2B & B2C SaaS</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_cloudcomputing-azure-ai-activity-7262651075822866433-D2yW">Cloud Native (Azure, GCP, AWS)</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_vulnerabilities-that-may-affect-your-llm-activity-7259639827325685760-JozG">OWASP top 10 (for web and LLM)</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_what-scrum-looks-like-when-you-release-daily-activity-7326011501712928770-HW-B">DevOps / DORA metrics</a></li>
             &nbsp;
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">Leading distributed teams</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">Product strategy & Roadmap</a></li>
-              <li><a href="https://www.linkedin.com/in/mveteanu/recent-activity/all/">Agile Transformation</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_read-my-latest-piece-on-running-high-performing-activity-7336093780955062274-nrqc">Leading distributed teams</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_cloudcomputing-azure-ai-activity-7262649993860198400-8oXt">Product strategy & Roadmap</a></li>
+              <li><a href="https://www.linkedin.com/posts/mveteanu_the-main-responsibilities-of-an-ops-team-activity-7326012112588185602-XVq5">Agile Transformation</a></li>
             </ul>
           </div>
 
