--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div data-w-id="3fd5aeb3-22da-ed60-7286-0d11f16597d3" style="opacity:0" class="content">
         <div class="name">Marian Veteanu</div>
         <!-- <h1 class="tagline"><strong class="bold-text">Technologist | Architect | Innovation Leader</strong></h1> -->
-        <h1 class="tagline"><strong class="bold-text">Software Engineering Leader - SaaS & AI Platform Architect</strong></h1>
+        <h1 class="tagline"><strong class="bold-text">Software Engineering Leader -<br> SaaS & AI Platform Architect</strong></h1>
         <!-- <p class="bio">Hello! My name is Marian Veteanu, and I’m a technologist with a passion for software development, architecture, and growing teams. I lead teams in building innovative technology platforms that align with business goals to solve real-world challenges. In the evenings and late at night, you can find me working on side projects or exploring cutting-edge frameworks, architectures, and technologies.</p> -->
 
         <p class="bio">Hello! My name is Marian Veteanu, and I’m a <strong>Director of Software Engineering</strong> and <strong>Technology Leader</strong> with a deep passion for software development, architecture, and building high-performing teams. I specialize in leading the design and delivery of innovative platforms that drive real-world impact. Whether scaling enterprise solutions, mentoring engineers, or shaping product direction, I bring a balanced approach of technical expertise and leadership experience. In the evenings and late at night, you’ll often find me working on side projects, or diving into emerging technologies and architectural patterns.</p>
